--- a/output/pages/contact.html
+++ b/output/pages/contact.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/css/style.css">
+	<link rel="stylesheet" type="text/css" href="http://jinzhangg.github.io/theme/css/style.css">
 	<!--<link rel="stylesheet/less" type="text/css" href="/theme/css/style.less">-->
 	<!--<script src="/theme/js/less.js" type="text/javascript"></script>-->
-	<link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/css/pygments.css">
+	<link rel="stylesheet" type="text/css" href="http://jinzhangg.github.io/theme/css/pygments.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:800,400,300|Inconsolata|Roboto:400,300' rel='stylesheet' type='text/css'>
 
-	<link href="http://localhost:8000/" type="application/atom+xml" rel="alternate" title="Jin Zhang ATOM Feed" />
+	<link href="http://jinzhangg.github.io/" type="application/atom+xml" rel="alternate" title="Jin Zhang ATOM Feed" />
 	
 	
 			<title>Contact</title>
@@ -16,23 +16,22 @@
 <body>
 	<section id="sidebar">
 		<figure id="user_logo">
-            <a href="http://localhost:8000"><div class="logo">&nbsp;</div></a>
+            <a href="http://jinzhangg.github.io"><div class="logo">&nbsp;</div></a>
 		</figure>
 
 		<div class="user_meta">
-            <h1 id="user"><a href="http://localhost:8000" class="">Jin Zhang</a></h1>
+            <h1 id="user"><a href="http://jinzhangg.github.io" class="">Jin Zhang</a></h1>
 			<h2></h2>
 						<p class="bio">Python, Django, Flask Developer</p>
 						<ul>
-																			<li><a href="http://localhost:8000/pages/about.html">About</a></li>
-											<li class="active"><a href="http://localhost:8000/pages/contact.html">Contact</a></li>
+																			<li><a href="http://jinzhangg.github.io/pages/about.html">About</a></li>
+											<li class="active"><a href="http://jinzhangg.github.io/pages/contact.html">Contact</a></li>
 																		<li><a href="http://github.com/jinzhangg">Github</a></li>
 							</ul>
 		</div>
 		<footer>
 			<address>
-				Powered by <a href="http://pelican.notmyidea.org/">Pelican</a>,
-		                theme by <a href="https://github.com/wting/pelican-svbtle">wting</a>.
+				Powered by <a href="http://getpelican.com">Pelican</a>.
 			</address>
 		</footer>
 	</section>
@@ -53,7 +52,7 @@
 	</header>
 	<article>
 		<h1 id="title">
-			<a href="http://localhost:8000/pages/contact.html" rel="bookmark">Contact</a>
+			<a href="http://jinzhangg.github.io/pages/contact.html" rel="bookmark">Contact</a>
 		</h1>
 		<div class="section" id="email">
 <h2>Email</h2>
@@ -64,7 +63,7 @@
 	</article>
 
 	<footer>
-		<a href="http://localhost:8000/" class="button_accent">&larr;&nbsp;&nbsp;&nbsp;Back to blog</a>
+		<a href="http://jinzhangg.github.io/" class="button_accent">&larr;&nbsp;&nbsp;&nbsp;Back to blog</a>
 	</footer>
 	</section>
 
