added old posts

--- a/output/archives.html
+++ b/output/archives.html
@@ -31,7 +31,6 @@
 		</div>
 		<footer>
 			<address>
-				Powered by <a href="http://getpelican.com">Pelican</a>.
 			</address>
 		</footer>
 	</section>
@@ -40,6 +39,10 @@
 	<h1>Archives for Jin Zhang</h1>
 
 <dl>
+    <dt>Thu 18 April 2013</dt>
+    <dd><a href="http://localhost:8000/posts/2013/sockjs-redis-nodejs-tutorial/">SockJS, Redis, Node.js Tutorial</a></dd>
+    <dt>Sun 07 April 2013</dt>
+    <dd><a href="http://localhost:8000/posts/2013/deploying-django-on-nginx-and-uwsgi/">Deploying Django on Nginx and uWSGI</a></dd>
     <dt>Sat 06 April 2013</dt>
     <dd><a href="http://localhost:8000/posts/2013/installing-django-on-heroku-with-postgresql/">Installing Django on Heroku with Postgresql</a></dd>
 </dl>
