--- a/output/archives.html
+++ b/output/archives.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/css/style.css">
+	<link rel="stylesheet" type="text/css" href="http://jinzhang.me/theme/css/style.css">
 	<!--<link rel="stylesheet/less" type="text/css" href="/theme/css/style.less">-->
 	<!--<script src="/theme/js/less.js" type="text/javascript"></script>-->
-	<link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/css/pygments.css">
+	<link rel="stylesheet" type="text/css" href="http://jinzhang.me/theme/css/pygments.css">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:800,400,300|Inconsolata|Roboto:400,300' rel='stylesheet' type='text/css'>
 
-	<link href="http://localhost:8000/" type="application/atom+xml" rel="alternate" title="Jin Zhang ATOM Feed" />
+	<link href="http://jinzhang.me/" type="application/atom+xml" rel="alternate" title="Jin Zhang ATOM Feed" />
 	
 	
 			<title>Jin Zhang</title>
@@ -16,16 +16,16 @@
 <body>
 	<section id="sidebar">
 		<figure id="user_logo">
-            <a href="http://localhost:8000"><div class="logo">&nbsp;</div></a>
+            <a href="http://jinzhang.me"><div class="logo">&nbsp;</div></a>
 		</figure>
 
 		<div class="user_meta">
-            <h1 id="user"><a href="http://localhost:8000" class="">Jin Zhang</a></h1>
+            <h1 id="user"><a href="http://jinzhang.me" class="">Jin Zhang</a></h1>
 			<h2></h2>
 						<p class="bio">Python, Django, Flask Developer</p>
 						<ul>
-																			<li><a href="http://localhost:8000/pages/about.html">About</a></li>
-											<li><a href="http://localhost:8000/pages/contact.html">Contact</a></li>
+																			<li><a href="http://jinzhang.me/pages/about.html">About</a></li>
+											<li><a href="http://jinzhang.me/pages/contact.html">Contact</a></li>
 																		<li><a href="http://github.com/jinzhangg">Github</a></li>
 							</ul>
 		</div>
@@ -40,11 +40,11 @@
 
 <dl>
     <dt>Thu 18 April 2013</dt>
-    <dd><a href="http://localhost:8000/posts/2013/sockjs-redis-nodejs-tutorial/">SockJS, Redis, Node.js Tutorial</a></dd>
+    <dd><a href="http://jinzhang.me/posts/2013/sockjs-redis-nodejs-tutorial/">SockJS, Redis, Node.js Tutorial</a></dd>
     <dt>Sun 07 April 2013</dt>
-    <dd><a href="http://localhost:8000/posts/2013/deploying-django-on-nginx-and-uwsgi/">Deploying Django on Nginx and uWSGI</a></dd>
+    <dd><a href="http://jinzhang.me/posts/2013/deploying-django-on-nginx-and-uwsgi/">Deploying Django on Nginx and uWSGI</a></dd>
     <dt>Sat 06 April 2013</dt>
-    <dd><a href="http://localhost:8000/posts/2013/installing-django-on-heroku-with-postgresql/">Installing Django on Heroku with Postgresql</a></dd>
+    <dd><a href="http://jinzhang.me/posts/2013/installing-django-on-heroku-with-postgresql/">Installing Django on Heroku with Postgresql</a></dd>
 </dl>
 	</section>
 
